services page done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -160,89 +160,89 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             our services
                         </h2>
                     </div>
-                    <article class="services-item">
+                    <article class="services-item animation" data-animation="slide-right">
                         <div class="row no-gutters">
                             <div class="col-12 col-sm-6">
-                                <div class="services-content">
+                                <div class="services-content" >
                                     <p class="services-description text-uppercase">
                                         Lip augmentation Lip filling with hyaluronum
                                     </p>
-                                    <a href="services.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-
-                                    <img src="img/services/services-01.png" alt=""/>
-
+                                    <a href="services-single.html">
+                                        <img src="img/services/services-01.png" alt=""/>
+                                    </a>
                                 </figure>
                             </div>
                         </div>
                     </article> <!--article end-->
 
-                    <article class="services-item">
+                    <article class="services-item animation" data-animation="slide-left" data-delay="0.2s">
                         <div class="row no-gutters">
                             <div class="col-12 col-sm-6">
                                 <div class="services-content">
                                     <p class="services-description text-uppercase">
                                         male and female haircut
                                     </p>
-                                    <a href="services.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6 order-sm-first">
                                 <figure class="mb-0">
-
-                                    <img src="img/services/services-02.png" alt=""/>
-
+                                    <a href="services-single.html">
+                                        <img src="img/services/services-02.png" alt=""/>
+                                    </a>
                                 </figure>
                             </div>
                         </div>
                     </article> <!--article end-->
 
-                    <article class="services-item">
+                    <article class="services-item animation" data-animation="slide-right" data-delay="0.2s">
                         <div class="row no-gutters">
                             <div class="col-12 col-sm-6">
                                 <div class="services-content">
                                     <p class="services-description text-uppercase">
                                         day and night makeup
                                     </p>
-                                    <a href="services.html" class="learn-more text-uppercase text-decoration-none">
+                                     <a href="services-single.html"> class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-
-                                    <img src="img/services/services-03.png" alt=""/>
-
+                                     <a href="services-single.html">
+                                        <img src="img/services/services-03.png" alt=""/>
+                                    </a>
                                 </figure>
                             </div>
                         </div>
                     </article> <!--article end-->
 
-                    <article class="services-item">
+                    <article class="services-item animation" data-animation="slide-left" data-delay="0.2s">
                         <div class="row no-gutters">
                             <div class="col-12 col-sm-6">
                                 <div class="services-content">
                                     <p class="services-description text-uppercase">
                                         waxing with cold and warm wax
                                     </p>
-                                    <a href="services.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6 order-sm-first">
                                 <figure class="mb-0">
-
-                                    <img src="img/services/services-04.png" alt=""/>
-
+                                    <a href="services-single.html">
+                                        <img src="img/services/services-04.png" alt=""/>
+                                    </a>
                                 </figure>
                             </div>
                         </div>
@@ -259,49 +259,53 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                         </h2>
                     </div>
                     <article class="team-item">
-                    <div class="row">
-                        <div class="col-12 col-md-4 align-self-lg-center">
-                            <div class="team-member animation" data-animation="slide-left" data-delay="0s">
-                                <p class="team-name text-uppercase mb-4">
-                                    <a href="#">
-                                        Vera Valdez
+                        <div class="row">
+                            <div class="col-12 col-md-4 align-self-lg-center">
+                                <div class="team-member animation" data-animation="slide-left" data-delay="0s">
+                                    <p class="team-name text-uppercase mb-4">
+                                        <a href="#">
+                                            Vera Valdez
+                                        </a>
+                                    </p>
+                                    <p class="team-info">
+                                        Lorem Ipsum is simply dummy text of the printing 
+                                        and typesetting industry. Lorem Ipsum has been 
+                                        the industry's standard dummy text ever since the 1500s,
+                                        when an unknown printer took a galley of type and
+                                        scrambled it to make a type specimen book. 
+                                        It has survived not only five centuries,
+                                        but also the leap into electronic typesetting,
+                                        remaining essentially unchanged.
+                                    </p>
+                                </div>
+                            </div> <!--col end-->
+                            <div class="col-12 col-md-5 col-lg-4 order-md-first">
+                                <figure class="animation mb-0" data-animation="slide-right" data-delay="0s">
+                                    <a href="#" class="team-img">
+                                        <img src="img/team/vera-valdez.png" alt=""/>
                                     </a>
-                                </p>
-                                <p class="team-info">
-                                    Lorem Ipsum is simply dummy text of the printing 
-                                    and typesetting industry. Lorem Ipsum has been 
-                                    the industry's standard dummy text ever since the 1500s,
-                                    when an unknown printer took a galley of type and
-                                    scrambled it to make a type specimen book. 
-                                    It has survived not only five centuries,
-                                    but also the leap into electronic typesetting,
-                                    remaining essentially unchanged.
-                                </p>
+                                </figure>
                             </div>
-                        </div> <!--col end-->
-                        <div class="col-12 col-md-5 col-lg-4 order-md-first">
-                            <figure class="animation" data-animation="slide-right" data-delay="0s">
-                                <a href="#" class="team-img">
-                                    <img src="img/team/vera-valdez.png" alt=""/>
-                                </a>
-                            </figure>
-                        </div>
 
-                    </div> <!--row end-->
+                        </div> <!--row end-->
                     </article>
                 </div> <!--container end-->
             </section> <!--section end-->
 
-
-
-
-
-
-
-
         </main> <!--main end-->
 
-
+        <footer>
+            <div class="container text-center">
+                <nav class="social">
+                    <a href="https://facebook.com" class="fa-brands fa-facebook-f text-decoration-none" target="_blank"></a>
+                    <a href="https://twitter.com" class="fa-brands fa-twitter text-decoration-none" target="_blank"></a>
+                    <a href="https://instagram.com" class="fa-brands fa-instagram text-decoration-none" target="_blank"></a>
+                </nav>
+                <p class="copyright mb-0">
+                    Copyright &copy; 2019 <a href="index.html"> Mademoiselle </a>
+                </p>
+            </div>
+        </footer>
 
 
 
