single service page done

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -27,6 +27,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <!--Theme css file-->
 
         <link href="css/theme.css" rel="stylesheet" type="text/css"/>
+        
+        <!-- fonts -->
+        <link href="css/fonts.css" rel="stylesheet" type="text/css"/>
 
 
     </head>
@@ -211,7 +214,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         day and night makeup
                                     </p>
-                                     <a href="services-single.html"> class="learn-more text-uppercase text-decoration-none">
+                                     <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
