--- a/public_html/services.html
+++ b/public_html/services.html
@@ -28,6 +28,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <link href="css/theme.css" rel="stylesheet" type="text/css"/>
 
+        <!-- fonts -->
+        <link href="css/fonts.css" rel="stylesheet" type="text/css"/>
 
     </head>
     <body>
