error page and site done

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -74,7 +74,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <section class="contact-section position-relative">
                 <div class="container">
                     <div class="row justify-content-md-center justify-content-lg-start">
-                        <div class="col-12 col-md-8 col-lg-6">
+                        <div class="col-12 col-md-8 col-lg-6 animation" data-animation="slide-right">
                             <h2 class="mb-5 text-uppercase">
                                 Please contact us using the form bellow
                             </h2>
@@ -148,6 +148,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
         <!--Font Awesome Icons-->
         <script src="https://kit.fontawesome.com/02b674f16c.js" crossorigin="anonymous"></script>
+        <script src="js/jquery.validate.min.js" type="text/javascript"></script>
 
         <script src="js/main.js" type="text/javascript"></script>
     </body>
