--- a/public_html/index.html
+++ b/public_html/index.html
@@ -170,14 +170,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         Lip augmentation Lip filling with hyaluronum
                                     </p>
-                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-                                    <a href="services-single.html">
+                                    <a href="error-404.html">
                                         <img src="img/services/services-01.png" alt=""/>
                                     </a>
                                 </figure>
@@ -214,14 +214,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         day and night makeup
                                     </p>
-                                     <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                     <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-                                     <a href="services-single.html">
+                                     <a href="error-404.html">
                                         <img src="img/services/services-03.png" alt=""/>
                                     </a>
                                 </figure>
@@ -236,14 +236,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         waxing with cold and warm wax
                                     </p>
-                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6 order-sm-first">
                                 <figure class="mb-0">
-                                    <a href="services-single.html">
+                                    <a href="error-404.html">
                                         <img src="img/services/services-04.png" alt=""/>
                                     </a>
                                 </figure>
@@ -266,7 +266,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <div class="col-12 col-md-4 align-self-lg-center">
                                 <div class="team-member animation" data-animation="slide-left" data-delay="0s">
                                     <p class="team-name text-uppercase mb-4">
-                                        <a href="#">
+                                        <a href="error-404.html">
                                             Vera Valdez
                                         </a>
                                     </p>
@@ -284,7 +284,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </div> <!--col end-->
                             <div class="col-12 col-md-5 col-lg-4 order-md-first">
                                 <figure class="animation mb-0" data-animation="slide-right" data-delay="0s">
-                                    <a href="#" class="team-img">
+                                    <a href="error-404.html" class="team-img">
                                         <img src="img/team/vera-valdez.png" alt=""/>
                                     </a>
                                 </figure>
