--- a/public_html/services.html
+++ b/public_html/services.html
@@ -93,14 +93,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         Lip augmentation Lip filling with hyaluronum
                                     </p>
-                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-                                    <a href="services-single.html">
+                                    <a href="error-404.html">
                                         <img src="img/services/services-01.png" alt=""/>
                                     </a>
                                 </figure>
@@ -137,14 +137,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         day and night makeup
                                     </p>
-                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6">
                                 <figure class="mb-0">
-                                    <a href="services-single.html">
+                                    <a href="error-404.html">
                                         <img src="img/services/services-03.png" alt=""/>
                                     </a>
                                 </figure>
@@ -159,14 +159,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                                     <p class="services-description text-uppercase">
                                         waxing with cold and warm wax
                                     </p>
-                                    <a href="services-single.html" class="learn-more text-uppercase text-decoration-none">
+                                    <a href="error-404.html" class="learn-more text-uppercase text-decoration-none">
                                         learn more
                                     </a>
                                 </div>
                             </div>
                             <div class="col-12 col-sm-6 order-sm-first">
                                 <figure class="mb-0">
-                                    <a href="services-single.html">
+                                    <a href="error-404.html">
                                         <img src="img/services/services-04.png" alt=""/>
                                     </a>
                                 </figure>
