--- a/public_html/blog-single.html
+++ b/public_html/blog-single.html
@@ -153,9 +153,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             <article class="news-tags">
                                 <p class="tags-title">Tags:</p>
                                 <div class="tags">
-                                    <a href="#" class="btn btn-light ">beauty</a>
-                                    <a href="#" class="btn btn-light ">hair</a>
-                                    <a href="#" class="btn btn-light ">glossy</a>
+                                    <a href="error-404.html" class="btn btn-light ">beauty</a>
+                                    <a href="error-404.html" class="btn btn-light ">hair</a>
+                                    <a href="error-404.html" class="btn btn-light ">glossy</a>
                                 </div>
                             </article>
                         </div><!--col end-->
