--- a/public_html/blog.html
+++ b/public_html/blog.html
@@ -88,7 +88,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <div class="container text-center">
 
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -108,7 +108,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.1s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -128,7 +128,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.15s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -148,7 +148,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.2s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -168,7 +168,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.25s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -188,7 +188,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.3s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -208,7 +208,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.35s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -228,7 +228,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.4s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -248,7 +248,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.45s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -268,7 +268,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.5s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -288,7 +288,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.55s">
                                 <figure>
                                     <a href="blog-single.html">
@@ -308,7 +308,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                             </article>
                         </div><!--col end-->
 
-                        <div class="col-12 col-sm-6 col-md-4">
+                        <div class="col-12 col-xm-6 col-md-4">
                             <article class="trends-item blog-item position-relative animation" data-animation="slide-top" data-delay="0.6s">
                                 <figure>
                                     <a href="blog-single.html">
